# brapi_stocks

./: .gitignore  README.md  constants.py  data_lake.ipynb  main.py  pyproject.toml  utils.py
api_ingestion/: brapi_api_consumer.py  main.py
brapistocks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spark/: dataframes.py  loader.py  queries.py
