[project]
name = "brapistocks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=4.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "urllib3<2",
]

[tool.setuptools]
py-modules = ["constants"]
packages = ["api_ingestion", "spark"]
